hphp/hack/test/typecheck/sealed/sealed_classes21.php.exp
File "sealed_classes21.php", line 2, characters 22-27:
`__Sealed` can only be used with named types, e.g. `Foo::class` (Parsing[1002])
File "sealed_classes21.php", line 2, characters 22-27:
`static` is undefined outside of a class (Typing[4061])
