hphp/hack/test/typecheck/sealed/sealed_classes21.php
<?hh
<<__Sealed(X::class, static::class)>> class X {}
